crates/crucible-cli/src/tui/oil/tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__interaction_modal_snapshots__snapshot_perm_modal_tool.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests.rs
expression: render_app(&app)
---
 Permission: Tool                                                               

  semantic_search (query="rust memory safety", limit=10)

 > [y] Allow once
   [n] Deny


 ↑/↓ navigate │ Enter select │ y/n/p shortcuts │ Esc cancel
